--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_speed_dial: ^1.2.5
+  image_picker: ^0.6.3+4
+  firebase_storage: ^3.1.1
+  
 
 dev_dependencies:
   flutter_test:
