--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.0+1
+  firebase_auth: ^0.15.4
+  provider: ^4.0.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
