--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,13 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - images/add.png
+    - images/barbell.png
+    - images/dish.png
+    - images/medical_history.png
+    - images/medical_tablet.png
+    - images/wine_bottle.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
