--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   image_picker: ^0.6.3+4
   firebase_storage: ^3.1.1
+  date_range_picker: ^1.0.3
+
+
   
 
 dev_dependencies:
