--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
   image_picker: ^0.6.3+4
   firebase_storage: ^3.1.1
   date_range_picker: ^1.0.3
+  datetime_picker_formfield: ^1.0.0
+  intl: ^0.16.1
 
   
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
