--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   image_picker: ^0.6.3+4
   firebase_storage: ^3.1.1
   date_range_picker: ^1.0.3
+  flutter_calendar_carousel: ^1.4.11
+
+
 
   
 
