--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   datetime_picker_formfield: ^1.0.0
   intl: ^0.16.1
   flutter_calendar_carousel: ^1.4.11
+  table_calendar: ^2.2.2
+
 
   
 dev_dependencies:
