--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   intl: ^0.16.1
   flutter_calendar_carousel: ^1.4.11 
   table_calendar: ^2.2.2
-  google_maps_flutter: ^0.5.11
+  google_maps_flutter: ^0.5.24+1
 
 
   
