--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
       <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyDB45n30I-A2OXGDbYhTDh1xLsrmNTCxkk"/>
 
+      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
