--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_calendar_carousel: ^1.4.11 
   table_calendar: ^2.2.2
   google_maps_flutter: ^0.5.24+1
+  geolocator: ^5.3.0
 
 
   
