--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="me_daily"
@@ -14,7 +17,7 @@
       <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyDB45n30I-A2OXGDbYhTDh1xLsrmNTCxkk"/>
 
-      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+     
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
