--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.6.3+4
   firebase_storage: ^3.1.1
   date_range_picker: ^1.0.3
+  flutter_holo_date_picker: ^0.1.2+4
   datetime_picker_formfield: ^1.0.0
   intl: ^0.16.1
   table_calendar: ^2.2.2
