--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   table_calendar: ^2.2.2
   google_maps_flutter: ^0.5.24+1
   geolocator: ^5.3.0
+  here_maps_webservice: ^1.0.3
+  location: ^2.5.3
 
 
 
