--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   geolocator: ^5.3.0
   flutter_staggered_grid_view: ^0.3.0
   charts_flutter: ^0.9.0
+  multi_page_form: ^1.0.4
+  flutter_scale: 0.1.2
 
 
 
