--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: A new Flutter project.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
+# Read more about Android vers ioning at https://developer.android.com/studio/publish/versioning
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^0.15.4
   provider: ^4.0.4
   flutter_spinkit: ^4.1.2
+  json_annotation: ^3.0.1
 
 
 
@@ -50,6 +51,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.2.5
+  build_runner: ^1.0.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -68,12 +71,12 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - images/add.png
-    - images/barbell.png
-    - images/dish.png
-    - images/medical_history.png
-    - images/medical_tablet.png
-    - images/wine_bottle.png
+    - images/more.png
+    - images/medicine.png
+    - images/food.png
+    - images/drink.png
+    - images/appointments.png
+    - images/exercise.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
