--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_spinkit: ^4.1.2
   json_annotation: ^3.0.1
   fancy_on_boarding: ^1.4.0
+  shared_preferences: ^0.5.6+3
 
 
 
@@ -42,7 +43,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   charts_flutter: ^0.9.0
   multi_page_form: ^1.0.4
-  flutter_scale: 0.1.2
+  flutter_scale: ^0.1.2
 
 
 
