--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   date_range_picker: ^1.0.6
   geocoder: ^0.2.1
   multi_image_picker: ^4.6.5+rc.1
+  get_it: ^4.0.1
+  photo_view: ^0.9.2
   
 
 
