Onboard started to edit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,9 @@ flutter:
     - images/add.png
     - images/minus.png
     - images/water.png
+    - images/onBoard1.png
+    - images/onBoard2.png
+    - images/onBoard3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
