--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   rxdart: ^0.23.1
   google_sign_in: ^4.4.1
+  flutter_local_notifications: ^1.4.2
 
 
 
