--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,6 @@ dependencies:
   rxdart: ^0.23.1
   google_sign_in: ^4.4.1
   flutter_local_notifications: ^1.4.2
-
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
   flutter_speed_dial: ^1.2.5
   image_picker: ^0.6.3+4
   firebase_storage: ^3.1.1
@@ -53,9 +46,13 @@ dependencies:
   multi_image_picker: ^4.6.5+rc.1
   get_it: ^4.0.1
   photo_view: ^0.9.2
+  stacked: ^1.2.4
 
 
 
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^0.1.2
   
 dev_dependencies:
   flutter_test:
